--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/resource-timeline": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
