--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.1.4"
   },
-  "resolutions": {
-    "rollup": "npm:@rollup/wasm-node"
-  }  
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
+  }
 }
